deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-app
  template:
    metadata:
      labels:
        app: k8s-app
    spec:
      containers:
      - name: k8s-container
        image: 851725487982.dkr.ecr.us-east-1.amazonaws.com/devops-app:latest
        ports:
        - containerPort: 3000
