green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      version: green
  template:
    metadata:
      labels:
        app: backend
        version: green
    spec:
      containers:
      - name: backend
        image: nginx
        ports:
        - containerPort: 80
