green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-green-svc
  namespace: dev
spec:
  selector:
    app: backend
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
