ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/actions.forward-multiple: >
      {
        "Type": "forward",
        "ForwardConfig": {
          "TargetGroups": [
            {
              "ServiceName": "backend-blue-svc",
              "ServicePort": "80",
              "Weight": 0
            },
            {
              "ServiceName": "backend-green-svc",
              "ServicePort": "80",
              "Weight": 100
            }
          ]
        }
      }
       
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forward-multiple
            port:
              name: use-annotation
